fix: Flashbar button wrapping too early and drawer triggers when no breadcrumbs are present

--- a/src/app-layout/visual-refresh/universal-toolbar.scss
+++ b/src/app-layout/visual-refresh/universal-toolbar.scss
@@ -44,5 +44,6 @@ section.universal-toolbar {
   > .universal-toolbar-drawers {
     column-gap: awsui.$space-static-xs;
     display: flex;
+    margin-left: auto;
   }
 }
