--- a/src/flashbar/styles.scss
+++ b/src/flashbar/styles.scss
@@ -116,7 +116,6 @@
 }
 
 .flashbar.breakpoint-default > .flash-list > .flash-list-item > .flash > .flash-body {
-  display: block;
   & > .action-button-wrapper {
     margin-left: awsui.$space-l;
     padding-left: awsui.$space-xxs;
